--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "3.1.*",
         "mews/captcha": "^3.2",
-        "spatie/laravel-permission": "^3.6.0"
+        "spatie/laravel-permission": "^3.6.0",
+        "stripe/stripe-php": "^10.15"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
